# HackerNewsAPI

./: .gitignore  .travis.yml  README.md  my_test_bot.py  pyproject.toml  requirements.txt  runtests.sh  setup.py
.github/workflows/: tests.yml
hn/: __init__.py  constants.py  hn.py  utils.py
tests/: conftest.py  test_hn.py  test_leaders.py  test_models.py  test_pagination.py  test_pydantic_models.py  test_stories_dict_structure.py  test_story_class.py  test_story_fromid.py  test_story_get_comments.py  test_utils.py
tests/presets/: 6374031_new.html
