[project]
name = "HackerNews"
version = "3.0.0"
description = "Python API for Hacker News."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Karan Goel", email = "karan@goel.im" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "requests>=2.28",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/karan/HackerNewsAPI/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hn"]

[dependency-groups]
dev = [
    "httpretty>=1.1",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
